[package]
name = "fake-boros"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
pallas = { git = "https://github.com/txpipe/pallas.git"}
rocket = "0.5.1"
thiserror = "2.0.11"
tokio = "1.43.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.0", features = ["v4"] }
